Move AES code into utilities directory

--- a/1.7/Makefile
+++ b/1.7/Makefile
@@ -1,4 +1,4 @@
-aes_ecb: aes_ecb.nim ../util/base64.nim
+aes_ecb: aes_ecb.nim ../util/aes.nim ../util/base64.nim
 	nim compile aes_ecb.nim
 
 clean:
